crates/oxide-code/src/tui/components/snapshots/ox__tui__components__status__tests__render_exit_armed_shows_static_hint_without_spinner.snap
---
source: crates/oxide-code/src/tui/components/status.rs
expression: "render_status(&mut bar, 80)"
---
"  ~/projects/demo │ main │ Opus 4.7 (xhigh) │ Press Ctrl+C again to exit        "
"────────────────────────────────────────────────────────────────────────────────"
