crates/oxide-code/src/tui/components/snapshots/ox__tui__components__status__tests__render_idle_with_title_shows_marketing_model_name_and_cwd.snap
---
source: crates/oxide-code/src/tui/components/status.rs
expression: "render_status(&mut bar, 80)"
---
"  ox │ claude-opus-4-7 │ Fix login flow │ ready                ~/projects/demo  "
"────────────────────────────────────────────────────────────────────────────────"
