crates/oxide-code/src/tui/components/snapshots/ox__tui__components__status__tests__render_idle_with_title_shows_model_title_and_cwd.snap
---
source: crates/oxide-code/src/tui/components/status.rs
expression: "render_status(&mut bar, 80)"
---
"  ~/projects/demo │ main │ Claude Opus 4.7 (xhigh) │ Ready │ Fix login flow     "
"────────────────────────────────────────────────────────────────────────────────"
