crates/oxide-code/src/tui/components/snapshots/ox__tui__components__status__tests__render_narrow_width_drops_cwd_and_title_slots.snap
---
source: crates/oxide-code/src/tui/components/status.rs
expression: "render_status(&mut bar, 40)"
---
"  Claude Opus 4.7 │ Ready               "
"────────────────────────────────────────"
