crates/oxide-code/src/tui/components/snapshots/ox__tui__components__status__tests__render_narrow_width_preserves_model_and_run_state.snap
---
source: crates/oxide-code/src/tui/components/status.rs
expression: "render_status(&mut bar, 40)"
---
"  Opus 4.7 (xhigh) │ Ready              "
"────────────────────────────────────────"
