crates/oxide-code/src/tui/components/snapshots/ox__tui__components__status__tests__render_narrow_width_truncates_cwd_and_title.snap
---
source: crates/oxide-code/src/tui/components/status.rs
expression: "render_status(&mut bar, 40)"
---
"  ox │ claude-opus-4-7 │ ready          "
"────────────────────────────────────────"
