crates/oxide-code/src/tui/components/snapshots/ox__tui__components__status__tests__render_streaming_shows_spinner_and_status_label.snap
---
source: crates/oxide-code/src/tui/components/status.rs
expression: "render_status(&mut bar, 80)"
---
"  Claude Opus 4.7 │ ⣷ Streaming · Esc to interrupt             ~/projects/demo  "
"────────────────────────────────────────────────────────────────────────────────"
